# bevy-15-game-boxes

./: Cargo.toml
assets/section_texture/: section_texture.wgsl
assets/shaders/: post_processing.wgsl  uber.wgsl
brp-scripts/: tutorial-query-transform.nu
examples/: gltf_extras_debug.rs  uber.rs
forks/bevy_gltf/: Cargo.toml
forks/bevy_gltf/src/: lib.rs  loader.rs  vertex_attributes.rs
src/: blender_types.rs  camera.rs  controls.rs  dev.rs  level_spawn.rs  lib.rs  main.rs  materials.rs  platforms.rs  post_process.rs  section_texture.rs  test_gltf_extras_components.rs
src/level_spawn/: on_level_spawn.rs
src/materials/: goal.rs  uber.rs
