[package]
name = "bevy-15-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.15.0"
bevy_asset_loader = { version = "0.22.0", features = [
    "3d",
    "progress_tracking",
] }
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui", rev = "d8f3cbb" }
iyes_progress = { version = "0.13.0", features = ["bevy_asset"] }
avian3d = { git = "https://github.com/Jondolf/avian", branch = "main" }
bevy-tnua = { git = "https://github.com/JulienLavocat/bevy-tnua", rev = "8524491" }
bevy-tnua-avian3d = { git = "https://github.com/JulienLavocat/bevy-tnua", rev = "8524491" }
bevy-inspector-egui = "0.28.0"
leafwing-input-manager = "0.16.0"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
