[package]
name = "bevy-15-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.1", features = [
    "bevy_remote",
    "file_watcher",
    "jpeg",
] }
bevy_asset_loader = { version = "0.22.0", features = [
    "3d",
    "progress_tracking",
] }
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui", rev = "d8f3cbb" }
iyes_progress = { version = "0.13.0", features = ["bevy_asset"] }
avian3d = "0.2.0"
bevy-tnua = "0.21.0"
bevy-tnua-avian3d = "0.2.0"
bevy-inspector-egui = "0.28.1"
leafwing-input-manager = "0.16.0"
itertools = "0.14.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"
nonmax = "0.5.5"


# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Remove expensive debug assertions due to <https://github.com/bevyengine/bevy/issues/14291>
[profile.dev.package.wgpu-types]
debug-assertions = false

[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

[patch.crates-io]
bevy_gltf = { path = "./forks/bevy_gltf" }
