[package]
name = "bevy_gltf"
version = "0.15.1"
edition = "2021"
description = "Bevy Engine GLTF loading"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "MIT OR Apache-2.0"
keywords = ["bevy"]

[features]
dds = ["bevy_render/dds", "bevy_image/dds", "bevy_core_pipeline/dds"]
pbr_transmission_textures = ["bevy_pbr/pbr_transmission_textures"]
pbr_multi_layer_material_textures = [
    "bevy_pbr/pbr_multi_layer_material_textures",
]
pbr_anisotropy_texture = ["bevy_pbr/pbr_anisotropy_texture"]

[dependencies]
# bevy
bevy_animation = { version = "0.15.1", optional = true }
bevy_app = { version = "0.15.1" }
bevy_asset = { version = "0.15.1" }
bevy_color = { version = "0.15.2" }
bevy_core = { version = "0.15.1" }
bevy_core_pipeline = { version = "0.15.1" }
bevy_ecs = { version = "0.15.1" }
bevy_hierarchy = { version = "0.15.1" }
bevy_image = { version = "0.15.1" }
bevy_math = { version = "0.15.1" }
bevy_pbr = { version = "0.15.1" }
bevy_reflect = { version = "0.15.1", features = ["bevy"] }
bevy_render = { version = "0.15.1" }
bevy_scene = { version = "0.15.1", features = ["bevy_render"] }
bevy_transform = { version = "0.15.1" }
bevy_tasks = { version = "0.15.1" }
bevy_utils = { version = "0.15.1" }

# other
gltf = { version = "1.4.0", default-features = false, features = [
    "KHR_lights_punctual",
    "KHR_materials_transmission",
    "KHR_materials_ior",
    "KHR_materials_volume",
    "KHR_materials_unlit",
    "KHR_materials_emissive_strength",
    "KHR_texture_transform",
    "extras",
    "extensions",
    "names",
    "utils",
] }
derive_more = { version = "1", default-features = false, features = [
    "error",
    "from",
    "display",
] }
base64 = "0.22.0"
percent-encoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
smallvec = "1.11"

[dev-dependencies]
bevy_log = { version = "0.15.1" }


[package.metadata.docs.rs]
rustdoc-args = ["-Zunstable-options", "--generate-link-to-definition"]
all-features = true
